<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_courses"
        android:icon="@drawable/ic_courses_24dp"
        android:title="@string/title_my_courses" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_chat_24dp"
        android:title="@string/title_chat" />

    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/ic_calendar_24dp"
        android:title="@string/title_calendar" />

    <item
        android:id="@+id/navigation_my_profile"
        android:icon="@drawable/ic_account_circle_28dp"
        android:title="@string/title_profile" />

</menu>
