<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_courses">

    <fragment
        android:id="@+id/navigation_courses"
        android:name="vnu.uet.mobilecourse.assistant.ui.view.CoursesFragment"
        android:label="@string/title_my_courses"
        tools:layout="@layout/fragment_courses" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="vnu.uet.mobilecourse.assistant.ui.view.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_chat"
        android:name="vnu.uet.mobilecourse.assistant.ui.view.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="vnu.uet.mobilecourse.assistant.ui.view.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar" />
</navigation>
