<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".view.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        style="@style/BackgroundHighlight"
        android:contentDescription="@string/background_light"
        app:layout_constraintEnd_toStartOf="@+id/glVertical"
        app:layout_constraintTop_toTopOf="@+id/glHorizontal2"
        app:srcCompat="@drawable/background_light" />

    <ImageView
        style="@style/BackgroundHighlight"
        android:layout_marginBottom="198dp"
        android:contentDescription="@string/background_light"
        app:layout_constraintBottom_toBottomOf="@id/glHorizontal1"
        app:layout_constraintStart_toStartOf="@+id/glVertical"
        app:srcCompat="@drawable/background_light" />

    <LinearLayout
        android:id="@+id/linearStudentIdLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/sibling_margin"
            android:contentDescription="@string/login"
            android:tint="@color/primaryDark"
            android:background="@color/transparent"
            app:srcCompat="@drawable/ic_account_circle_28dp" />

        <EditText
            android:id="@+id/etStudentId"
            style="@style/EditText"
            android:layout_width="@dimen/login_input_field_width"
            android:autofillHints=""
            android:hint="@string/student_id"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearPasswordLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sibling_margin_x2"
        android:background="@color/transparent"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearStudentIdLayout">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/sibling_margin"
            android:background="@color/transparent"
            android:contentDescription="@string/login"
            android:tint="@color/primaryDark"
            app:srcCompat="@drawable/ic_lock_28dp" />

        <EditText
            android:id="@+id/etPassword"
            style="@style/EditText"
            android:layout_width="@dimen/login_input_field_width"
            android:autofillHints=""
            android:hint="@string/password"
            android:inputType="textPassword" />
    </LinearLayout>

    <Button
        android:id="@+id/btnLogin"
        style="@style/Button"
        android:layout_width="0dp"
        android:layout_marginTop="@dimen/sibling_margin_x4"
        android:text="@string/login"
        android:onClick="login"
        app:layout_constraintEnd_toEndOf="@+id/linearPasswordLayout"
        app:layout_constraintStart_toStartOf="@+id/linearPasswordLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearPasswordLayout"
        tools:ignore="OnClick" />

    <TextView
        android:id="@+id/tvLoginTitle"
        style="@style/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        app:layout_constraintBottom_toTopOf="@+id/linearStudentIdLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.48" />

    <TextView
        android:id="@+id/tvLoginGuideLine"
        style="@style/Subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/login_guideline"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLoginTitle" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glVertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="340dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glHorizontal1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_begin="386dp"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glHorizontal2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="655dp" />

</androidx.constraintlayout.widget.ConstraintLayout>