<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.view.course.ExploreCourseFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/aplThumbnail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="@color/primary"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:collapsedTitleTextAppearance="@style/ToolbarTitleText"
            app:expandedTitleTextAppearance="@style/ToolbarTitleText"
            app:expandedTitleMarginBottom="@dimen/sibling_margin_x2"
            app:expandedTitleMarginStart="@dimen/sibling_margin_x3">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/collapsing_toolbar_size">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/sibling_margin_x6"
                    android:layout_marginStart="@dimen/sibling_margin_x2"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/isometric_course_thumbnail"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.Toolbar
                style="@style/Toolbar"
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/sibling_margin_x2" >

                <TextView
                    style="@style/ToolbarTitleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/sibling_margin_x3"
                    android:gravity="center_vertical"
                    android:text="@string/app_name" />

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/tab_height"
            android:layout_marginTop="@dimen/sibling_margin_x2"
            android:background="@color/primary"
            app:tabBackground="@drawable/tab_item"
            app:tabIndicator="@null"
            android:layout_gravity="center_horizontal"
            app:tabMode="scrollable"
            app:tabRippleColor="@color/transparent"
            app:tabTextAppearance="@style/Subtitle"
            app:tabUnboundedRipple="false">

            <com.google.android.material.tabs.TabItem
                android:paddingHorizontal="@dimen/sibling_margin_x3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_title_progress" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_title_grade" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_title_classmates" />

        </com.google.android.material.tabs.TabLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vpCourseContent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>